Changes to fit Java SE 7. All authorization annotations are suppressed Workaround to support Map.remove(key, value) operation